--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   json_annotation: ^4.4.0
   json_serializable: ^6.1.4
   sqflite: ^2.0.2
+  sentry_flutter: ^6.5.1
 
 dev_dependencies:
   build_runner: ^2.1.8
